[tool.poetry]
name = "olabisi"
version = "0.1.0"
description = ""
authors = ["Andrew Ramirez", "Aaron Meyer <git@asmlab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.23.2"
seaborn = "^0.11.2"
xarray = "^2022.3.0"
tensorpack = {git = "https://github.com/meyer-lab/tensorpack.git", branch = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "olabisi.figures.common:genFigure"